using System;

internal class AnimationStrings
{
    internal static String IsMoving = "IsMoving";
    internal static String IsRunning = "IsRunning";
    internal static String IsGrounded = "IsGrounded";
    internal static String yVelocity = "yVelocity";
    internal static String Jump = "Jump";

}